# ai-shell

./: .gitignore  README.md  ai-shell.zsh  pyproject.toml  requirements.txt  setup.py
ai_shell/: __init__.py  cli.py  config.py  core.py
